--- a/.github/workflow/unpack.yml
+++ b/.github/workflow/unpack.yml
@@ -1,36 +1,54 @@
-# This is a basic workflow to help you get started with Actions
+name: unpack
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      IMAGE_LINK:
+        description: 'Image'
+        required: true
+        default: ''
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    name: Dump by ${{ github.actor }}
     runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
+    permissions:
+      contents: write
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Cleanup
+      uses: rokibhasansagar/slimhub_actions@main
+      
+    - name: Set Swap Space
+      uses: pierotofy/set-swap-space@master
+      with:
+        swap-size-gb: 12
+
+    - name: Install Git
+      run: |
+        apt install git-all
+
+    - name: Setup Dump Environment
+      run: |
+        mkdir -p workspace && cd workspace
+        git clone --depth=1 https://github.com/SavedByLight/DumprX.git ./dumprx
+        cd dumprx && bash setup.sh
+        git clone --depth=1 https://github.com/SavedByLight/extract-via-magiskboot.git ./unpacker
+
+
+    - name: Image
+      run: |
+        cd workspace/dumprx
+        bash unpack.sh ${{ github.event.inputs.IMAGE_LINK }} ./out
+
+
+
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
